--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "private": false,
   "files": [
     "src",
     "dist"
@@ -35,5 +36,8 @@
     "canvas": "^2.11.2",
     "fluent-ffmpeg": "^2.1.3",
     "sharp": "^0.33.5"
+  },
+  "publishConfig": {
+    "@QuanhuZeYu": "https://npm.pkg.github.com"
   }
 }
