--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,9 +13,14 @@ jobs:
         with:
           node-version: 20
       - name: Install FFmpeg
-        run: sudo apt-get update && sudo apt-get install -y ffmpeg
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y ffmpeg
+          ffmpeg -version # 验证 FFmpeg 安装
+          which ffmpeg    # 输出 FFmpeg 的路径
       - run: npm ci
       - run: npm test
+        shell: /usr/bin/bash -e {0}
 
   publish-gpr:
     needs: build
@@ -30,7 +35,11 @@ jobs:
           node-version: 20
           registry-url: https://npm.pkg.github.com/
       - name: Install FFmpeg
-        run: sudo apt-get update && sudo apt-get install -y ffmpeg
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y ffmpeg
+          ffmpeg -version # 验证 FFmpeg 安装
+          which ffmpeg    # 输出 FFmpeg 的路径
       - run: npm ci
       - run: npm publish
         env:
