--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "@quanhuzeyu/koishi-plugin-memelib",
   "version": "0.1.1-beta.8",
-  "main": "dist/index.js",
+  "main": "src/index.js",
   "private": false,
   "files": [
-    "src",
-    "dist"
+    "src"
   ],
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "node src/index.js",
     "dev": "ts-node src/index.ts",
     "test": "ts-node -r tsconfig-paths/register src/test.ts"
   },
