--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@quanhuzeyu/koishi-plugin-memelib",
-  "version": "0.1.2-beta.1",
+  "version": "0.1.2-rc.1",
   "main": "src/index.js",
   "private": false,
   "files": [
@@ -33,6 +33,7 @@
   "dependencies": {
     "canvas": "^2.11.2",
     "fluent-ffmpeg": "^2.1.3",
+    "gif-frames": "^1.0.1",
     "sharp": "^0.33.5"
   },
   "publishConfig": {
