--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@quanhuzeyu/koishi-plugin-memelib",
-  "version": "0.1.2-rc.4",
+  "version": "0.1.2-rc.6",
   "main": "src/index.js",
   "private": false,
   "files": [
@@ -12,7 +12,11 @@
     "start": "node src/index.js",
     "dev": "ts-node src/index.ts",
     "test1": "ts-node -r tsconfig-paths/register src/test.ts",
-    "test": "echo `跳过测试`"
+    "test": "echo `跳过测试`",
+    "clean": "node clean.js",
+    "allpub": "npm run pubgit && npm run pubnpm",
+    "pubgit": "npm run build && npm publish --registry=https://npm.pkg.github.com",
+    "pubnpm": "npm run build && npm publish --registry=https://registry.npmjs.org"
   },
   "keywords": [
     "chatbot",
@@ -32,6 +36,7 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
+    "@canvacord/gif": "^1.0.2",
     "canvas": "^2.11.2",
     "fluent-ffmpeg": "^2.1.3",
     "gif-frames": "^1.0.1",
