--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@quanhuzeyu/koishi-plugin-memelib",
-  "version": "0.1.2-rc.6",
+  "version": "0.1.3-rc.1",
   "main": "src/index.js",
   "private": false,
   "files": [
@@ -15,8 +15,8 @@
     "test": "echo `跳过测试`",
     "clean": "node clean.js",
     "allpub": "npm run pubgit && npm run pubnpm",
-    "pubgit": "npm run build && npm publish --registry=https://npm.pkg.github.com",
-    "pubnpm": "npm run build && npm publish --registry=https://registry.npmjs.org"
+    "pubgit": "npm publish --registry=https://npm.pkg.github.com",
+    "pubnpm": "npm publish --registry=https://registry.npmjs.org"
   },
   "keywords": [
     "chatbot",
