refactor(memelib): 更新包名并优化依赖项
- 将包名从`@quanhuzeyu/koishi-plugin-memelib`更改为`@quanhuzeyu/memelib`，以反映其作为独立模块的定位。
- 通过添加`concat-stream`和`gifencoder`依赖项来优化memelib的npm包，从而增强其功能。
- 更新`@types/node`至版本22.5.1，以确保类型定义与Node.js的最新版本兼容。
- 在`package.json`中配置`--access=public`标志，确保npm包发布后可供公共访问。

此更改通过提高模块的可发现性和功能性，提升了memelib的可用性和扩展性。

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@quanhuzeyu/koishi-plugin-memelib",
+  "name": "@quanhuzeyu/memelib",
   "version": "0.1.3-rc.6",
   "main": "src/index.js",
   "private": false,
@@ -15,8 +15,8 @@
     "test": "echo `跳过测试`",
     "clean": "node clean.js",
     "allpub": "npm run pubgit && npm run pubnpm",
-    "pubgit": "npm publish --registry=https://npm.pkg.github.com",
-    "pubnpm": "npm publish --registry=https://registry.npmjs.org"
+    "pubgit": "npm publish --registry=https://npm.pkg.github.com --access=public",
+    "pubnpm": "npm publish --registry=https://registry.npmjs.org --access=public"
   },
   "keywords": [
     "chatbot",
@@ -28,9 +28,10 @@
   "author": "泉户泽雨",
   "description": "",
   "devDependencies": {
+    "@types/concat-stream": "^2.0.3",
     "@types/fluent-ffmpeg": "^2.1.25",
     "@types/gifencoder": "^2.0.3",
-    "@types/node": "^22.5.0",
+    "@types/node": "^22.5.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.5.4"
@@ -38,8 +39,10 @@
   "dependencies": {
     "@canvacord/gif": "^1.0.2",
     "canvas": "^2.11.2",
+    "concat-stream": "^2.0.0",
     "fluent-ffmpeg": "^2.1.3",
     "gif-frames": "^1.0.1",
+    "gifencoder": "^2.0.1",
     "sharp": "^0.33.5"
   },
   "publishConfig": {
