--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@quanhuzeyu/memelib",
-  "version": "0.1.3-rc.7",
+  "version": "0.1.4-rc.1",
   "main": "src/index.js",
   "private": false,
   "files": [
@@ -14,7 +14,7 @@
     "test1": "ts-node -r tsconfig-paths/register src/test.ts",
     "test": "echo `跳过测试`",
     "clean": "node clean.js",
-    "allpub": "npm run pubgit && npm run pubnpm",
+    "allpub": "npm run build && npm run pubgit && npm run pubnpm",
     "pubgit": "npm publish --registry=https://npm.pkg.github.com --access=public",
     "pubnpm": "npm publish --registry=https://registry.npmjs.org --access=public"
   },
