--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@quanhuzeyu/memelib",
-  "version": "0.1.4-rc.1",
+  "version": "0.1.4-rc.2",
   "main": "src/index.js",
   "private": false,
   "files": [
@@ -31,6 +31,7 @@
     "@types/concat-stream": "^2.0.3",
     "@types/fluent-ffmpeg": "^2.1.25",
     "@types/gifencoder": "^2.0.3",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^22.5.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
@@ -43,6 +44,7 @@
     "fluent-ffmpeg": "^2.1.3",
     "gif-frames": "^1.0.1",
     "gifencoder": "^2.0.1",
+    "js-yaml": "^4.1.0",
     "sharp": "^0.33.5"
   },
   "publishConfig": {
