--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "koishi-plugin-memelib",
+  "name": "@quanhuzeyu/koishi-plugin-memelib",
   "description": "memelib插件版",
   "version": "0.0.1",
   "main": "lib/index.js",
@@ -9,15 +9,26 @@
     "dist"
   ],
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "allpub": "npm run build && npm run pubgit && npm run pubnpm",
+    "pubgit": "npm publish --registry=https://npm.pkg.github.com --access=public",
+    "pubnpm": "npm publish --registry=https://registry.npmjs.org --access=public"
+  },
   "keywords": [
     "chatbot",
     "koishi",
     "plugin"
   ],
-  "devDependencies": {},
+  "devDependencies": {
+    "@canvacord/gif": "^1.0.2",
+    "concat-stream": "^2.0.0",
+    "fluent-ffmpeg": "^2.1.3",
+    "gifencoder": "^2.0.1",
+    "js-yaml": "^4.1.0"
+  },
   "peerDependencies": {
-    "koishi": "^4.17.11"
+    "koishi": "^4.17.11",
+    "@quanhuzeyu/koishi-plugin-qhzy-sharp": "^1.0.0"
   },
   "dependencies": {
     "@quanhuzeyu/koishi-plugin-qhzy-sharp": "^1.0.0"
