--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@quanhuzeyu/koishi-plugin-memelib",
   "description": "memelib插件版",
-  "version": "0.0.2",
+  "version": "0.1.8",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "files": [
@@ -19,18 +19,22 @@
     "koishi",
     "plugin"
   ],
-  "devDependencies": {
-    
-  },
   "peerDependencies": {
-    "koishi": "^4.17.11",
-    "@quanhuzeyu/koishi-plugin-qhzy-sharp": "^1.0.0"
+    "@quanhuzeyu/koishi-plugin-qhzy-sharp": "^1.0.0",
+    "koishi": "^4.17.11"
   },
   "dependencies": {
-    "@canvacord/gif": "^1.0.2",
     "concat-stream": "^2.0.0",
     "fluent-ffmpeg": "^2.1.3",
+    "gif.js": "^0.2.0",
     "gifencoder": "^2.0.1",
-    "js-yaml": "^4.1.0"
+    "gifuct-js": "^2.1.2",
+    "js-yaml": "^4.1.0",
+    "pngjs": "^7.0.0"
+  },
+  "devDependencies": {
+    "@types/concat-stream": "^2.0.3",
+    "@types/gif.js": "^0.2.5",
+    "@types/pngjs": "^6.0.5"
   }
 }
