--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@quanhuzeyu/koishi-plugin-memelib",
   "description": "memelib插件版",
-  "version": "0.1.11",
+  "version": "0.1.12",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "private": false,
@@ -11,6 +11,7 @@
   ],
   "license": "MIT",
   "scripts": {
+    "build": "node build.js",
     "allpub": "npm run build && npm run pubgit && npm run pubnpm",
     "pubgit": "npm publish --registry=https://npm.pkg.github.com --access=public",
     "pubnpm": "npm publish --registry=https://registry.npmjs.org --access=public"
