--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@quanhuzeyu/koishi-plugin-qhzy-sharp": "^1.1.1",
     "@types/concat-stream": "^2.0.3",
     "@types/gif.js": "^0.2.5",
-    "@types/pngjs": "^6.0.5"
+    "@types/pngjs": "^6.0.5",
+    "sharp": "^0.33.5"
   }
 }
