--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,14 +3,14 @@
     "rootDir": "src",
     "outDir": "lib",
     "target": "es2022",
-    "module": "NodeNext",
+    "module": "ESNext",
     "declaration": true,
-    // "emitDeclarationOnly": true,
+    "emitDeclarationOnly": true,
     "composite": true,
     "incremental": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
-    "moduleResolution": "NodeNext",
+    "moduleResolution": "Bundler",
     "jsx": "react-jsx",
     "jsxImportSource": "@satorijs/element",
     "types": [
