--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@quanhuzeyu/koishi-plugin-memelib",
   "description": "memelib插件版",
-  "version": "0.4.0",
+  "version": "0.4.2",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "private": false,
@@ -24,7 +24,7 @@
   ],
   "peerDependencies": {
     "@quanhuzeyu/koishi-plugin-qhzy-sharp": "^1.2.1",
-    "koishi": "^4.17.11"
+    "koishi": ">4.17.11"
   },
   "dependencies": {
     "concat-stream": "^2.0.0",
