添加koishi-plugin-puppeteer为peerDependencies项
此次更改在项目的peerDependencies中添加了"koishi-plugin-puppeteer"，版本限制为"^3.9.0"。这将确保使用该插件的项目也安装了兼容版本的"koishi-plugin-puppeteer"。

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"plugin"
 	],
 	"peerDependencies": {
+		"koishi-plugin-puppeteer": "^3.9.0",
 		"@quanhuzeyu/koishi-plugin-qhzy-sharp": "^1.2.1",
 		"koishi": ">4.17.11"
 	},
