--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@quanhuzeyu/koishi-plugin-memelib",
 	"description": "memelib插件版",
-	"version": "0.5.0",
+	"version": "0.5.1",
 	"main": "lib/index.js",
 	"typings": "lib/index.d.ts",
 	"private": false,
@@ -23,7 +23,7 @@
 		"plugin"
 	],
 	"peerDependencies": {
-		"koishi-plugin-puppeteer": "^3.9.0",
+		"@quanhuzeyu/koishi-plugin-canvas": ">=0.0.1",
 		"@quanhuzeyu/koishi-plugin-qhzy-sharp": "^1.2.1",
 		"koishi": ">4.17.11"
 	},
@@ -40,6 +40,7 @@
 		"@types/concat-stream": "^2.0.3",
 		"@types/gif.js": "^0.2.5",
 		"@types/pngjs": "^6.0.5",
-		"sharp": "^0.33.5"
+		"sharp": "^0.33.5",
+		"canvas": "^2.11.2"
 	}
 }
