版本更新至0.5.7，包含多个依赖更新和功能改进
本次提交将包版本从0.5.5提升到0.5.7，同时引入了一系列新的依赖项，并对现有依赖项进行了更新。新增的依赖包括`@img/sharp-libvips-dev`、`@img/sharp-wasm32`、`color`、`detect-libc`和`semver`等，以增强图像处理和色彩管理功能。另外，还更新了部分依赖项以修复潜在的bug和性能问题。

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@quanhuzeyu/koishi-plugin-memelib",
 	"description": "memelib插件版",
-	"version": "0.5.5",
+	"version": "0.5.7",
 	"main": "lib/index.js",
 	"typings": "lib/index.d.ts",
 	"private": false,
@@ -41,6 +41,16 @@
 		"@types/gif.js": "^0.2.5",
 		"@types/pngjs": "^6.0.5",
 		"sharp": "^0.33.5",
+		"@img/sharp-libvips-dev": "^1.0.4",
+		"@img/sharp-wasm32": "^0.33.5",
+		"color": "^4.2.3",
+		"detect-libc": "^2.0.3",
+		"semver": "^7.6.3",
+		"color-convert": "^2.0.1",
+		"color-string": "^1.9.1",
+		"color-name": "^2.0.0",
+		"simple-swizzle": "^0.2.2",
+		"is-arrayish": "^0.3.2",
 		"canvas": "^2.11.2"
 	}
 }
